# bevy-tpl

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
assets/config/: game.toml
src/: camera.rs  initial.rs  lib.rs  main.rs  menus.rs  player.rs
src/camera/: fly.rs  mod.rs  ui.rs
src/loading/: config.rs  mod.rs
src/playing/: bound.rs  mod.rs  scene.rs
src/scene/: bound.rs  light.rs  mod.rs  util.rs
src/util/: mod.rs  pipe.rs  trait_extension.rs
src/utils/: color.rs  mod.rs
